--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply bg-gray-100 text-black dark:bg-gray-900 dark:text-white;
+}
